--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-tailwind-postcss-jit",
+  "name": "tailwind-labs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
